plugins {
    id 'dev.architectury.loom' version '1.10-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
}
architectury { minecraft = project.minecraft_version }
allprojects { group = rootProject.maven_group; version = rootProject.mod_version }
subprojects {
    apply plugin: 'dev.architectury.loom'; apply plugin: 'architectury-plugin'; apply plugin: 'maven-publish'
    repositories { mavenCentral(); maven { url = 'https://maven.neoforged.net/releases' };
        maven { url = 'https://maven.fabricmc.net/' };
        maven { url = 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' } }
    dependencies { minecraft "net.minecraft:minecraft:$rootProject.minecraft_version";
        mappings loom.officialMojangMappings() }
 java { toolchain.languageVersion = JavaLanguageVersion.of(21); withSourcesJar() }
    tasks.withType(JavaCompile).configureEach { options.release = 21; options.encoding = 'UTF-8' }
    def artifactVersion = "${rootProject.mod_version}-${rootProject.minecraft_version}"
    tasks.named('jar') {
        archiveBaseName = rootProject.archives_name
        archiveVersion = artifactVersion
        archiveClassifier = project.name
    }
    tasks.named('sourcesJar') {
        archiveBaseName = rootProject.archives_name
        archiveVersion = artifactVersion
        archiveClassifier = "${project.name}-sources"
    }
    tasks.named('remapJar') {
        archiveBaseName = rootProject.archives_name
        archiveVersion = artifactVersion
        archiveClassifier = project.name
        doFirst { archiveClassifier.set(project.name) }
    }
    tasks.named('remapSourcesJar') {
        archiveBaseName = rootProject.archives_name
        archiveVersion = artifactVersion
        archiveClassifier = "${project.name}-sources"
        doFirst { archiveClassifier.set("${project.name}-sources") }
    }
}

configure([project(':fabric'), project(':neoforge')]) {
    tasks.register('genIntellijRuns') {
        group = 'ide'
        description = 'Generates IntelliJ Gradle launch configurations.'
        def platform = project.name
        def outputDir = rootProject.layout.projectDirectory.dir('.idea/runConfigurations')
        outputs.files(['Client', 'Server'].collect { outputDir.file("NeoGuanNiao_${platform}_${it}.xml") })
        doLast {
            outputDir.asFile.mkdirs()
            ['Client', 'Server'].each { side ->
                outputDir.file("NeoGuanNiao_${platform}_${side}.xml").asFile.setText("""<component name="ProjectRunConfigurationManager">
  <configuration default="false" name="NeoGuanNiao ${platform} ${side}" type="GradleRunConfiguration" factoryName="Gradle">
    <ExternalSystemSettings>
      <option name="externalProjectPath" value="\$PROJECT_DIR\$" />
      <option name="externalSystemIdString" value="GRADLE" />
      <option name="taskNames"><list><option value=":${platform}:run${side}" /></list></option>
      <option name="taskDescriptions"><list /></option>
    </ExternalSystemSettings>
    <method v="2" />
  </configuration>
</component>
""", 'UTF-8')
            }
        }
    }
}
tasks.register('genIntellijRuns') {
    group = 'ide'
    description = 'Generates IntelliJ launch configurations for both platforms.'
    dependsOn(':fabric:genIntellijRuns', ':neoforge:genIntellijRuns')
}
